<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- android:icon="@drawable/ic_home_black_24dp" -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile"
            />
        <item
            android:id="@+id/nav_news_feed"
            android:title="@string/nav_news_feed" />
        <item
            android:id="@+id/nav_trips"
            android:title="@string/nav_trips" />

        <item
            android:id="@+id/nav_friends"
            android:title="@string/nav_friends" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:title="@string/nav_log_out" />
        </menu>
    </item>

</menu>